feat(image): integrate libvips for image processing and add new image service